# fine-tune-llm-rl

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  main.py  pyproject.toml  setup.md
data/: README.md  sft_training_data2.csv
lesson-1-supervised-fine-tuning/: README.md
lesson-1-supervised-fine-tuning/exercises/demo/: demo.ipynb  demo.py  wikipedia_qa_dataset.csv  wikipedia_qa_great_wall_of_china.csv
lesson-1-supervised-fine-tuning/exercises/solution/: sft_dataset_solution.py  solution.py
lesson-1-supervised-fine-tuning/exercises/starter/: README.md  clinical_sft_dataset.csv  starter.ipynb  starter.py
lesson-2-practical-fine-tuning-peft/exercises/demo/: demo.ipynb  demo.py
lesson-2-practical-fine-tuning-peft/exercises/solution/: solution.py
lesson-2-practical-fine-tuning-peft/exercises/starter/: README.md  starter.py
lesson-3-agent-architecture-fundamentals/exercises/demo/: demo.py
lesson-3-agent-architecture-fundamentals/exercises/starter/: README.md  starter.py
lesson-4-agentic-training-data-generation/exercises/demo/: demo.py  solution.py
lesson-4-agentic-training-data-generation/exercises/solution/: solution.py
lesson-4-agentic-training-data-generation/exercises/starter/: README.md  starter.py
lesson-5-theory-ai-alignment/exercises/demo/: demo.py
lesson-5-theory-ai-alignment/exercises/solution/: solution.py
models/: README.md
project/: README.md  data_classes.py  starter_agentic_rlft.py  starter_agentic_traces.py  starter_sft.py  test_setup.py
project/data/: sft_training_data.csv
scripts/: test_mps.py
(+6 files in other folders)
