[project]
name = "fine-tune-llm-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.7"
dependencies = [
    "accelerate==1.12.0",
    "chromadb>=1.3.5",
    "datasets==4.4.1",
    "ipykernel>=7.1.0",
    "json-repair>=0.54.2",
    "kuzu>=0.11.3",
    "mlx-lm==0.28.3",
    "npcpy>=1.3.3",
    "ollama>=0.6.1",
    "peft==0.18.0",
    "pip>=25.3",
    "scikit-learn==1.5.2",
    "sentencepiece==0.2.1",
    "torch==2.9.1",
    "torchaudio==2.9.1",
    "torchvision==0.24.1",
    "transformers==4.57.3",
    "trl==0.25.1",
    "wikipedia>=1.4.0",
]
